# projeto_geant4_final

project/: CMakeLists.txt  MacroTest.mac  init_vis.mac  project.cc
project/analysis/: analysis.cpp
project/configuration/: acrylic_absorption.json  acrylic_index.json  detector.json  efficiency_UV.json  efficiency_VIS.json  lar_abslength.json  lar_abslength_andre.json  lar_absorption.json  lar_index.json  lar_index_andre.json  lar_rayleigh.json  lar_rayleigh_andre.json  lar_scint.json  pen_absorption.json  pen_emissium.json  pen_raylaigth.json  vikuiti_abs.json  vikuiti_reflectance.json  vikuiti_reflectance_andre.json  vikuiti_spectrum.json
project/include/: DetectorConstruction.hh  EventAction.hh  OneHit.hh  OneHitUV.hh  OneHitVIS.hh  OptFileManager.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunActionMessenger.hh  SensitiveDetector.hh  SiPMSpectrum.hh  SteppingAction.hh  TrackingAction.hh  TreeStructures.hh
project/scripts/: acrylic_absorption.csv  acrylic_rindex.csv  calculate_acrylic.ipynb  calculate_lar.ipynb  calculate_pen.ipynb  calculate_sipm.ipynb  calculate_vikuiti.ipynb  emissium_pen.csv  liquid_argon_rayleigh.csv  liquid_argon_rindex.csv  liquid_argon_scint.csv  pen_absorption.csv  pen_rayleigth.csv  sipm_uv.csv  sipm_vs.csv  solid_angle.ipynb  spectra1.csv  spectra2.csv  vikuiti_abs.csv  vikuiti_reflectance.csv  vikuiti_spectrum.csv
project/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  OneHit.cc  OneHitUV.cc  OneHitVIS.cc  OptFileManager.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunActionMessenger.cc  SensitiveDetector.cc  SteppingAction.cc  TrackingAction.cc
